--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "16.11.26",
     "@types/react": "17.0.44",
+    "babel-jest": "^27.5.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "jest": "^27.5.1",
     "prisma": "3.12.0",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
