--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "next": "12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "8.0.2"
+    "zustand": "^3.7.2"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
