--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@prisma/client": "3.12.0",
     "cookie": "^0.4.2",
     "jsonwebtoken": "^8.5.1",
