--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recharts": "^2.1.9",
     "zustand": "^3.7.2"
   },
   "devDependencies": {
