--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.6.1",
     "@prisma/client": "3.12.0",
     "cookie": "^0.4.2",
+    "immer": "^9.0.12",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.4",
     "react": "17.0.2",
