--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "next lint",
     "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "prisma:generate": "prisma generate",
-    "test:w": "jest --watch",
+    "test:w": "jest --watch --",
     "test": "jest"
   },
   "dependencies": {
