--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "27.5.1",
     "eslint": "8.15.0",
     "eslint-config-next": "^13.4.3",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "27.5.1",
     "prisma": "3.14.0",
     "ts-node": "10.7.0",
