--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "ts-node": "10.7.0",
     "typescript": "4.6.4"
   },
-  "prisma": {}
+  "prisma": {},
+  "engines": {
+    "node": ">=16.15.1"
+  }
 }
