--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/react": "^18.2.7",
     "babel-jest": "27.5.1",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.4.3",
     "jest": "27.5.1",
     "prisma": "3.14.0",
     "ts-node": "10.7.0",
