--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "cookie": "^0.5.0",
     "immer": "^9.0.12",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.1.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.29.0",
     "recharts": "^2.1.9",
     "zustand": "^3.7.2"
@@ -36,14 +36,17 @@
     "@types/jest": "27.4.1",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.35",
-    "@types/react": "17.0.44",
+    "@types/react": "^18.2.7",
     "babel-jest": "27.5.1",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.4.3",
     "jest": "27.5.1",
     "prisma": "3.14.0",
     "ts-node": "10.7.0",
     "typescript": "4.6.4"
   },
-  "prisma": {}
+  "prisma": {},
+  "engines": {
+    "node": ">=16.15.1"
+  }
 }
