Changes as per Prisma v4 migration docs - Trial 1

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "check-types": "tsc --noemit",
+    "lint": "yarn run check-types && next lint",
     "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "prisma:generate": "prisma generate",
     "test:w": "jest --watch --",
