fix(prisma): Introspect 1. Used `prisma db pull` to stay in sync with db features 2. Formating and Added prisma commands to package.json

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "lint": "yarn run check-types && next lint",
     "format": "prettier --write .",
     "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "prisma:generate": "prisma generate",
     "test:w": "jest --watch --",
-    "test": "jest"
+    "test": "jest",
+    "p:gen": "prisma generate",
+    "p:mig": "prisma migrate",
+    "p:db": "prisma db",
+    "p:validate": "prisma validate",
+    "p:format": "prisma format"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
