--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-config-next": "^13.4.3",
     "eslint-config-prettier": "^8.8.0",
     "jest": "29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8",
     "prisma": "4.15.0",
     "ts-node": "10.7.0",
