Add codesandbox config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # use mysql db
-DATABASE_URL=
-SHADOW_DATABASE_URL=
+DATABASE_URL=mysql://<username>:<password>@<host>:<port>/<db_name>
+SHADOW_DATABASE_URL=mysql://<username>:<password>@<host>:<port>/<db_name>
 JWT_SECRET=
-NEXT_PUBLIC_APP_URL=
