--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # use mysql db
-DATABASE_URL=mysql://<username>:<password>@<host>:<port>/<db_1>
-SHADOW_DATABASE_URL=mysql://<username>:<password>@<host>:<port>/<db_2>
+DATABASE_URL=mysql://<username>:<password>@<host>:<port>/<db_name>
+SHADOW_DATABASE_URL=mysql://<username>:<password>@<host>:<port>/<db_name>
 JWT_SECRET=
