--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+## NOTE: This file is used for DEVELOPMENT purposes ONLY. DO NOT use it in production.
+## NOTE: DON'T include SENSITIVE information in this file.
 DATABASE_URL="mysql://myuser:example@mysqldb:3306/database1"
 JWT_SECRET="sdjfsdfsdf"
 SHADOW_DATABASE_URL="mysql://myuser:example@mysqldb:3306/database2"
